fix board and its modals adding horizontal scroll and handling add-users and add-topics buttons

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,10 +22,6 @@
     background-color: #caf0f8;
 }
 
-/*
-https://coolors.co/001219-005f73-0a9396-94d2bd-e9d8a6-ee9b00-ca6702-bb3e03-ae2012-9b2226
-*/
-
 .bfy-bg-dark {
     background-color: #001219;
 }
@@ -70,8 +66,17 @@ https://coolors.co/001219-005f73-0a9396-94d2bd-e9d8a6-ee9b00-ca6702-bb3e03-ae201
     filter: brightness(0.75)
 }
 
+.signin-logo {
+    filter: invert(90%)
+}
+
 .brand {
     transform: translateX(-50%);
     left: 60%;
     position: absolute;
+}
+
+.bfy-board {
+    overflow-x: scroll;
+    overflow-y: hidden;
 }
